@@ -31,4 +31,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens io.allurx.kit.selenium/io.allurx.kit.selenium=io.allurx.kit.selenium.test</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
